# progate-aws-backend

./: .env.example  .gitignore  Dockerfile_dev  README.md  buildspec.yml  docker-compose.yaml  main.py  pyproject.toml  settings.py  taskdef.json
docker/: Dockerfile_dev  Dockerfile_prd
models/: play.py  user.py
routers/: costs.py  extractor.py  play.py  user.py
scripts/: create-table.py  entrypoint.sh  init-data.sh
src/: main.py  settings.py
src/models/: play.py  scenario.py  share.py  structure.py
src/routers/: costs.py  extractor.py  play.py  play_fixed.py  scenarios.py  share.py
src/routers/helpers/: README.md  cost_calculator.py  loader.py  service.py  tests.py
src/routers/helpers/costs/: dynamodb_costs.json
src/routers/helpers/scenarios/: corporate_site_scenario.json  personal_blog_scenario.json
src/scenario/: README.md  __init__.py  corporate_site_scenario.json  loader.py  personal_blog_scenario.json  service.py  tests.py
src/tests/: test_costs.py  test_costs_integration.py  test_costs_performance.py  test_verify_jwt.py
tests/: test_save_user_endpoint.py
