[project]
name = "progate-aws-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.3",
    "fastapi>=0.115.14",
    "moto>=5.1.8",
    "pydantic-settings>=2.10.1",
    "pyjwt[ucrypto]>=2.10.1",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "websocket>=0.2.1",
]

[dependency-groups]
dev = [
    "joserfc>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]
